# pmctl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/pmctl/: SKILL.md
.claude-plugin/: marketplace.json
.cursor-plugin/: plugin.json
.cursor/rules/: pmctl.mdc
plugins/pmctl/.claude-plugin/: plugin.json
skill/: SKILL.md
src/pmctl/: __init__.py  api.py  cli.py  config.py
