[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmctl"
version = "0.2.0"
description = "CLI for browsing Postman collections, requests, and environments. Ships as an AI agent skill/plugin for Claude Code, Cursor, Codex, and OpenClaw."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Wenbing Li" },
]
keywords = ["postman", "cli", "api", "collections", "ai-agent", "claude-code", "cursor", "codex", "skill", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
pmctl = "pmctl.cli:app"

[project.urls]
Homepage = "https://github.com/wbingli/pmctl"
Repository = "https://github.com/wbingli/pmctl"
Issues = "https://github.com/wbingli/pmctl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pmctl"]

[tool.ruff]
target-version = "py311"
line-length = 100
